--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,6 +1,8 @@
 main {
     height: 100vh;
-    background-image: url(../images/background-home-desktop.jpg);
+    padding-top: 4rem;
+    background: url(../images/background-home-desktop.jpg) no-repeat;
+    background-size: cover;
     display: grid;
     grid-template-areas: "menu menu"
                          "text button";
@@ -48,6 +50,10 @@ header nav ul li {
 }
 
 header nav ul li:hover {
+    border-bottom: 0.3rem solid #ffffff50;
+}
+
+header nav ul li:active {
     border-bottom: 0.3rem solid #ffffff;
 }
 
@@ -65,11 +71,12 @@ header nav ul li a span {
     grid-area: text;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
 }
 
 .main-text-area .main-text-container {
     width: 45rem;
+    margin-bottom: 13rem;
 }
 
 .main-text-area .main-text-container .main-text-prelude {
@@ -86,6 +93,7 @@ header nav ul li a span {
 }
 
 .main-text-area .main-text-container .main-text {
+    font-family: 'Barlow', sans-serif;
     text-align: justify;
     font-size: 1.8rem;
     line-height: 3.2rem;
@@ -96,15 +104,22 @@ header nav ul li a span {
     grid-area: button;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
 }
 
 .button-area button {
     width: 27.4rem;
     height: 27.4rem;
+    margin-bottom: 13rem;
     border: none;
     border-radius: 50%;
+    cursor: pointer;
     font-family: 'Bellefair', serif;
     font-size: 3.2rem;
     letter-spacing: 0.2rem;
+    transition: box-shadow 0.5s ease-in;
+}
+
+.button-area button:hover {
+    box-shadow: 0 0 0 8.8rem #9797973b;
 }
