--- a/src/css/home.css
+++ b/src/css/home.css
@@ -4,7 +4,8 @@ body {
 }
 
 main {
-    min-height: 100vh;
+    height: 100vh;
+    max-height: 110rem;
     max-width: 200rem;
     padding-top: 4rem;
     margin: 0 auto;
