--- a/src/css/technology.css
+++ b/src/css/technology.css
@@ -77,7 +77,7 @@ header nav ul li a span {
 }
 
 main .page-prelude-title {
-    margin: 0 0 3.4rem 19rem; 
+    margin-left: 16.5rem; 
     color: #ffffff;
     font-size: 2.8rem;
     letter-spacing: 0.472rem;
@@ -90,7 +90,7 @@ main .page-prelude-title span {
 }
 
 main .main-container {
-    margin-left: 19rem;
+    margin-left: 16.5rem;
     display: grid;
     grid-template-areas: "navigation text image";
     grid-template-columns: 1fr 8fr 7fr;
@@ -130,7 +130,7 @@ main .main-container .navigation-buttons div:hover {
 
 main .main-container .text-container {
     grid-area: text;
-    padding: 12rem;
+    padding: 12rem 8rem;
     text-align: justify;
 }
 
