--- a/src/css/destination.css
+++ b/src/css/destination.css
@@ -11,69 +11,6 @@ main {
     display: grid;
     grid-template-areas: "menu menu"
                          "image destination-infos";
-    grid-template-rows: 10rem;
-}
-
-header {
-    grid-area: menu;
-    padding-left: 5.5rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-header .logo {
-    width: 4.8rem;
-    height: 4.8rem;
-}
-
-header nav {
-    position: relative;
-    width: 60%;
-    height: 95%;
-    background-color: #ffffff41;
-    display: flex;
-}
-
-header nav .header-design-line {
-    position: absolute;
-    left: -55%;
-    width: 60%;
-    height: 50%;
-    border-bottom: 0.1rem solid #979797;
-}
-
-header nav ul {
-    margin-left: 15%;
-    display: flex;
-    align-items: flex-end;
-    gap: 4.8rem;
-}
-
-header nav ul li {
-    height: 60%;
-}
-
-header nav ul li:hover {
-    border-bottom: 0.3rem solid #ffffff50;
-}
-
-header nav ul li:active {
-    border-bottom: 0.3rem solid #ffffff;
-}
-
-header nav ul li.active-page {
-    border-bottom: 0.3rem solid #ffffff;
-}
-
-header nav ul li a {
-    font-size: 1.6rem;
-    letter-spacing: 0.27rem;
-}
-
-header nav ul li a span {
-    margin-right: 0.5rem;
-    font-weight: bold;
 }
 
 .image-area {
@@ -180,4 +117,40 @@ header nav ul li a span {
     color: #D0D6F9;
     font-size: 1.4rem;
     letter-spacing: 0.23rem;
+}
+
+@media screen and (max-width: 800px) {
+    main {
+        padding-top: 0;
+        display: flex;
+        flex-direction: column;
+    }
+
+    header {
+        height: 10rem;
+    }
+
+    header nav {
+        justify-content: center;
+        height: 100%;
+    }
+
+    header nav .header-design-line {
+        display: none;
+    }
+
+    header nav ul {
+        margin-left: 0;
+    }
+
+    header nav ul li a {
+        font-size: 1.4rem;
+        letter-spacing: 0.236rem;
+    }
+    
+    header nav ul li a span {
+        display: none;
+    }
+
+    
 }
