--- a/src/css/home.css
+++ b/src/css/home.css
@@ -4,7 +4,7 @@ body {
 }
 
 main {
-    height: 100vh;
+    min-height: 100vh;
     max-height: 110rem;
     max-width: 200rem;
     padding-top: 4rem;
@@ -12,9 +12,11 @@ main {
     display: grid;
     grid-template-areas: "menu menu"
                          "text button";
+    grid-template-rows: 10rem;
 }
 
 .main-text-area {
+    max-height: 100rem;
     grid-area: text;
     display: flex;
     justify-content: center;
@@ -32,7 +34,7 @@ main {
     color: #D0D6F9;
 }
 
-.main-text-area .main-text-container .main-text-tittle {
+.main-text-area .main-text-container .main-text-title {
     margin: 0.25rem 0;
     font-family: 'Bellefair', serif;
     font-size: 15rem;
@@ -48,6 +50,7 @@ main {
 }
 
 .button-area {
+    max-height: 100rem;
     grid-area: button;
     display: flex;
     justify-content: center;
@@ -73,40 +76,14 @@ main {
 
 @media screen and (max-width: 800px) {
     body {
-        background: url(../images/home/background-home-tablet.jpg);
+        background: url(../images/home/background-home-tablet.jpg) no-repeat;
+        background-size: cover;
     }
 
     main {
-        padding-top: 0;
+        padding: 0 0 9rem 0;
         display: flex;
         flex-direction: column;
-    }
-
-    header {
-        height: 10rem;
-        margin-bottom: 10.6rem;
-    }
-
-    header nav {
-        justify-content: center;
-        height: 100%;
-    }
-
-    header nav .header-design-line {
-        display: none;
-    }
-
-    header nav ul {
-        margin-left: 0;
-    }
-
-    header nav ul li a {
-        font-size: 1.4rem;
-        letter-spacing: 0.236rem;
-    }
-    
-    header nav ul li a span {
-        display: none;
     }
 
     .main-text-area {
