--- a/src/css/crew.css
+++ b/src/css/crew.css
@@ -109,3 +109,77 @@ main {
 .crew-image-area .commander-img {
     display: block;
 }
+
+@media screen and (max-width: 800px){
+    main {
+        padding-top: 0;
+        display: flex;
+        flex-direction: column;
+    }
+
+    header {
+        margin-bottom: 0;
+    }
+
+    .text-area {
+        max-width: 100vw;
+        padding: 0;
+        align-self: center;
+        text-align: center;
+        
+    }
+    
+    .text-area .text-area-container {
+        width: 62rem;
+    }
+    
+    .text-area .text-area-container .page-prelude-title {
+        margin: 4rem 0 6rem 0;
+        text-align: start;
+        font-size: 2rem;
+        letter-spacing: 0.338rem;
+    }
+    
+    .text-area .text-area-container .crew-infos {
+        display: flex;
+        justify-content: center;
+    }
+
+    .text-area .text-area-container .crew-infos li .crew-patent{
+        margin-bottom: 0.8rem;
+        font-size: 2.4rem;
+    }
+
+    .text-area .text-area-container .crew-infos li .crew-name {
+        margin-bottom: 1.6rem;
+        font-size: 4rem;
+    }
+
+    .text-area .text-area-container .crew-infos li .crew-description {
+        width: 46rem;
+        margin-bottom: 4rem;
+        text-align: center;
+        line-height: 2.8rem;
+        font-size: 1.6rem;
+    }
+
+    .text-area .navigation-dots {
+        justify-content: center;
+        gap: 1.6rem;
+    }
+
+    .text-area .navigation-dots div {
+        width: 1rem;
+        height: 1rem;
+    }
+
+    .crew-image-area {
+        margin-top: 4rem;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .crew-image-area img {
+        max-width: 35vw;
+    }
+}
