--- a/src/css/technology.css
+++ b/src/css/technology.css
@@ -4,7 +4,7 @@ body {
 }
 
 main {
-    height: 100vh;
+    min-height: 100vh;
     max-height: 100rem;
     max-width: 200rem;
     padding-top: 4rem;
@@ -32,6 +32,7 @@ main .page-prelude-title span {
 
 main .navigation-buttons {
     grid-area: navigation;
+    max-height: 110rem;
     padding-top: 12rem;
     display: flex;
     flex-direction: column;
@@ -65,6 +66,7 @@ main .navigation-buttons div:hover {
 
 main .text-container {
     grid-area: text;
+    max-height: 110rem;
     width: 68rem;
     padding: 12rem 8rem;
     text-align: justify;
@@ -101,13 +103,70 @@ main .text-container ul li .technology-text {
 
 main .img-container {
     grid-area: image;
+    max-height: 110rem;
 }
 
-main .img-container img {
+main .img-container picture {
     display: none;
     border-radius: 0.2rem;
 }
 
-main .img-container img:first-child {
+main .img-container picture:first-child {
     display: block;
+}
+
+@media screen and (max-width: 800px) {
+    main {
+        padding: 0 0 9.7rem 0;
+        display: flex;
+        flex-direction: column;
+    }
+
+    header {
+        margin-bottom: 4rem;
+    }
+
+    main .page-prelude-title {
+        margin: 0 0 0 4rem; 
+        font-size: 2rem;
+        letter-spacing: 0.338rem;
+    }
+
+    main .page-prelude-title span {
+        margin-right: 1.6rem;
+    }
+
+    main .img-container {
+        margin-top: 6rem;
+        align-self: center;
+    }
+    
+    main .navigation-buttons {
+        padding-top: 5.6rem;
+        flex-direction: row;
+        justify-content: center;
+        gap: 1.6rem;
+    }
+    
+    main .navigation-buttons div {
+        font-size: 2.4rem;
+        width: 6rem;
+        height: 6rem;
+    }
+
+    main .text-container {
+        width: 100vw;
+        margin-top: 4.4rem;
+        padding: 0 15.5rem;
+        text-align: center;
+    }
+    
+    main .text-container ul li .technology-title {
+        font-size: 4rem;
+    }
+    
+    main .text-container ul li .technology-text {
+        font-size: 1.6rem;
+        line-height: 2.8rem;
+    }
 }
