adicionando menu burger

--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -61,6 +61,14 @@ header nav ul li a span {
     font-weight: bold;
 }
 
+header .menu-burger-img {
+    display: none;
+}
+
+header .menu-burger-active-page {
+    display: none;
+}
+
 @media screen and (max-width: 800px) {
     header {
         min-height: 10rem;
@@ -87,5 +95,38 @@ header nav ul li a span {
     
     header nav ul li a span {
         display: none;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    header {
+        padding: 0 5.5rem;
+        margin-bottom: 4.8rem;
+        position: relative;
+    }
+
+    header .logo {
+        width: 4rem;
+        height: 4rem;
+    }
+
+    header nav {
+        display: none;
+    }
+
+    header .menu-burger-img {
+        display: block;
+        z-index: 1;
+    }
+
+    header .menu-burger-active-page {
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 65vw;
+        height: 100vh;
+        background:  #ffffff / 0.05;
+        backdrop-filter: blur(1.5rem);
     }
 }
