--- a/src/css/destination.css
+++ b/src/css/destination.css
@@ -180,3 +180,49 @@ main {
         justify-content: center;
     }
 }
+
+@media screen and (max-width: 600px) {
+    header {
+        margin-bottom: 2.4rem;
+    }
+
+    .image-area {
+        padding: 0;
+    }
+
+    .image-area .page-title {
+        margin: 0 0 3.2rem 0;
+        text-align: center;
+        font-size: 1.6rem;
+        letter-spacing: 0.27rem;
+    }
+
+    .image-area img {
+        width: 17rem;
+        height: 17rem;
+    }
+
+    .destination-infos-area {
+        padding-top: 2.6rem;
+    }
+
+    .destination-infos-area .destination-infos-container {
+        width: 32rem;
+        margin-bottom: 5.8rem;
+    }
+
+    .destination-infos-area .destination-infos-container .destination-title {
+        font-size: 5.6rem;
+    }
+
+    .destination-infos-area .destination-infos-container .destination-text {
+        font-size: 1.5rem;
+        line-height: 2.5rem;
+        margin-bottom: 3.2rem;
+    }
+
+    .destination-infos-area .destination-infos-container footer {
+        flex-direction: column;
+        gap: 3.2rem;
+    }
+}
