--- a/src/css/home.css
+++ b/src/css/home.css
@@ -99,7 +99,6 @@ main {
         text-align: center;
         font-size: 2rem;
         letter-spacing: 0.338rem;
-        color: #D0D6F9;
     }
 
     .main-text-area .main-text-container .main-text {
@@ -112,5 +111,45 @@ main {
         width: 24.2rem;
         height: 24.2rem;
         margin-bottom: 0;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    /* body {
+        background-image: url(../images/home/background-home-mobile.jpg);
+    } */
+
+    main {
+        padding-bottom: 5rem;
+    }
+
+    .main-text-area {
+        align-self: center;
+        max-width: 33rem;
+        height: fit-content;
+        margin-bottom: 8rem;
+    }
+
+    .main-text-area .main-text-container .main-text-prelude {
+        font-size: 1.6rem;
+        letter-spacing: 0.27rem;
+    }
+
+    .main-text-area .main-text-container .main-text-title {
+        margin: 2.7rem 0;
+        text-align: center;
+        font-size: 8rem;
+    }
+
+    .main-text-area .main-text-container .main-text {
+        font-size: 1.5rem;
+        line-height: 2.5rem;
+    }
+
+    .button-area button {
+        width: 15rem;
+        height: 15rem;
+        font-size: 2rem;
+        letter-spacing: 0.13rem;
     }
 }
