--- a/src/css/technology.css
+++ b/src/css/technology.css
@@ -1,24 +1,28 @@
 body {
     background: url(../images/technology/background-technology-desktop.jpg) no-repeat;
     background-size: cover;
+    max-width: 250rem;
 }
 
 main {
     min-height: 100vh;
     max-height: 100rem;
-    max-width: 200rem;
-    padding-top: 4rem;
+    max-width: 250rem;
     margin: 0 auto;
+    padding-bottom: 10rem;
     display: grid;
     grid-template-areas: "menu menu menu"
                          "title title title"
                          "navigation text image";
-    grid-template-rows: 10rem;
+}
+
+main header {
+    margin-top: 4rem;
 }
 
 main .page-prelude-title {
     grid-area: title;
-    margin: 7.4rem 0 0 20rem; 
+    margin: 7.4rem 0 2.5rem 20rem; 
     color: #ffffff;
     font-size: 2.8rem;
     letter-spacing: 0.472rem;
@@ -33,7 +37,7 @@ main .page-prelude-title span {
 main .navigation-buttons {
     grid-area: navigation;
     max-height: 110rem;
-    padding-top: 12rem;
+    padding: 12rem 0 0 5vw;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
@@ -68,7 +72,7 @@ main .text-container {
     grid-area: text;
     max-height: 110rem;
     width: 68rem;
-    padding: 12rem 8rem;
+    padding: 12rem 13rem 12rem 8rem;
     text-align: justify;
 }
 
@@ -103,27 +107,46 @@ main .text-container ul li .technology-text {
 
 main .img-container {
     grid-area: image;
-    max-height: 110rem;
+    width: 100%;
+    min-width: 50rem;
+    height: 51rem;
 }
 
-main .img-container picture {
+main .img-container div{
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
     display: none;
-    border-radius: 0.2rem;
 }
 
-main .img-container picture:first-child {
+main .img-container .vehicle-img{
+    background: url(../images/technology/image-launch-vehicle-portrait.jpg) no-repeat;
     display: block;
 }
 
+main .img-container .spaceport-img{
+    background: url(../images/technology/image-spaceport-portrait.jpg) no-repeat;
+}
+
+main .img-container .capsule-img{
+    background: url(../images/technology/image-space-capsule-portrait.jpg) no-repeat;
+}
+
 @media screen and (max-width: 800px) {
+    body {
+        background-image: url(../images/technology/background-technology-tablet.jpg);
+        max-width: 100vw;
+    }
+    
     main {
         padding: 0 0 9.7rem 0;
         display: flex;
         flex-direction: column;
     }
 
-    header {
-        margin-bottom: 4rem;
+    main header {
+        margin: 0 0 4rem 0;
     }
 
     main .page-prelude-title {
@@ -137,12 +160,25 @@ main .img-container picture:first-child {
     }
 
     main .img-container {
+        max-width: 98vw;
         margin-top: 6rem;
         align-self: center;
     }
-    
+
+    main .img-container div{
+        background-size: 100% !important;
+    }
+
+    main .img-container .capsule-img {
+        background-position: center;
+    }
+
+    main .img-container .vehicle-img, main .img-container .spaceport-img {
+        background-position: bottom;
+    }
+
     main .navigation-buttons {
-        padding-top: 5.6rem;
+        padding: 5.6rem 0 0 0;
         flex-direction: row;
         justify-content: center;
         gap: 1.6rem;
@@ -155,12 +191,19 @@ main .img-container picture:first-child {
     }
 
     main .text-container {
-        width: 100vw;
+        width: 45rem;
         margin-top: 4.4rem;
-        padding: 0 15.5rem;
+        padding: 0;
+        align-self: center;
         text-align: center;
     }
     
+    main .text-container .technology-prelude-text {
+        margin-bottom: 1rem;
+        font-size: 1.4rem;
+        letter-spacing: 0.236rem;
+    }
+
     main .text-container ul li .technology-title {
         font-size: 4rem;
     }
@@ -168,5 +211,59 @@ main .img-container picture:first-child {
     main .text-container ul li .technology-text {
         font-size: 1.6rem;
         line-height: 2.8rem;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    body {
+        background-image: url(../images/technology/background-technology-mobile.jpg);
+    }
+
+    main {
+        padding-bottom: 8rem;
+    }
+    
+    main header {
+        padding: 0 2.4rem;
+        margin-bottom: 0;
+    }
+
+    main .page-prelude-title {
+        margin: 0 0 3.2rem 0; 
+        font-size: 1.6rem;
+        letter-spacing: 0.27rem;
+        align-self: center;
+    }
+
+    main .img-container {
+        min-width: auto;
+        max-height: 30rem;
+        margin-top: 0;
+    }
+
+    main .navigation-buttons {
+        padding-top: 3.4rem;
+    }
+
+    main .navigation-buttons div {
+        font-size: 1.6rem;
+        width: 4rem;
+        height: 4rem;
+    }
+
+    main .text-container {
+        width: 33rem;
+        margin-top: 2.6rem;
+        padding: 0;
+        text-align: center;
+    }
+
+    main .text-container ul li .technology-title {
+        font-size: 2.4rem;
+    }
+
+    main .text-container ul li .technology-text {
+        font-size: 1.5rem;
+        line-height: 2.5rem;
     }
 }
