--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -68,6 +68,26 @@ header .menu-burger-navigation {
     transition: width 0.4s;
 }
 
+@media screen and (max-width: 1150px) {
+    header .menu-navigation {
+        width: 65%;
+    }
+
+    header .menu-navigation .header-design-line {
+        left: -45%;
+        width: 50%;
+    }
+    
+    header .menu-navigation ul {
+        margin-left: 10%;
+    }
+
+    header .menu-navigation ul li a {
+        font-size: 1.4rem;
+        letter-spacing: 0.236rem;
+    }
+}
+
 @media screen and (max-width: 800px) {
     header {
         min-height: 10rem;
