--- a/src/css/home.css
+++ b/src/css/home.css
@@ -4,10 +4,10 @@ body {
 }
 
 main {
-    min-height: 100vh;
-    max-height: 110rem;
+    height: 100vh;
+    max-height: 100rem;
     max-width: 200rem;
-    padding-top: 4rem;
+    padding: 4rem 0;
     margin: 0 auto;
     display: grid;
     grid-template-areas: "menu menu"
@@ -25,7 +25,6 @@ main {
 
 .main-text-area .main-text-container {
     width: 45rem;
-    margin-bottom: 13rem;
 }
 
 .main-text-area .main-text-container .main-text-prelude {
@@ -60,7 +59,6 @@ main {
 .button-area button {
     width: 27.4rem;
     height: 27.4rem;
-    margin-bottom: 13rem;
     border: none;
     border-radius: 50%;
     cursor: pointer;
@@ -74,6 +72,27 @@ main {
     box-shadow: 0 0 0 8.8rem #9797973b;
 }
 
+@media screen and (max-width: 1150px) {
+    .main-text-area {
+        margin-right: 5rem;
+    }
+
+    .main-text-area .main-text-container .main-text-prelude {
+        font-size: 2rem;
+        letter-spacing: 0.338rem;
+    }
+
+    .main-text-area .main-text-container .main-text {
+        font-size: 1.6rem;
+        line-height: 2.8rem;
+    }
+
+    .button-area button {
+        width: 24.2rem;
+        height: 24.2rem;
+    }
+}
+
 @media screen and (max-width: 800px) {
     body {
         background: url(../images/home/background-home-tablet.jpg) no-repeat;
@@ -81,6 +100,8 @@ main {
     }
 
     main {
+        height: auto;
+        min-height: 100vh;
         padding: 0 0 9rem 0;
         display: flex;
         flex-direction: column;
@@ -92,7 +113,7 @@ main {
 
     .main-text-area {
         height: 33.4rem;
-        margin-bottom: 15.6rem;
+        margin: 0 0 15.6rem 0;
     }
 
     .main-text-area .main-text-container {
@@ -101,19 +122,13 @@ main {
 
     .main-text-area .main-text-container .main-text-prelude {
         text-align: center;
-        font-size: 2rem;
-        letter-spacing: 0.338rem;
     }
 
     .main-text-area .main-text-container .main-text {
         text-align: center;
-        font-size: 1.6rem;
-        line-height: 2.8rem;
     }
 
     .button-area button {
-        width: 24.2rem;
-        height: 24.2rem;
         margin-bottom: 0;
     }
 }
